Ex09 - Set ID textbox readonly
Set ID textbox readonly because it is not allowed to change ID.

--- a/AspServerExample/Ex09_UpdatingCustomer/Ex09_UpdatingCustomerClient.html
+++ b/AspServerExample/Ex09_UpdatingCustomer/Ex09_UpdatingCustomerClient.html
@@ -13,7 +13,7 @@
             <!-- ID -->
             <tr>
                 <td>ID</td>
-                <td><input id="input_id" type="text" /></td>
+                <td><input id="input_id" type="text" readonly /></td>
             </tr>
 
             <!-- Password -->
